--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ author: "Alfa Nugraha"
 toc: true
 format: 
     html:
-        code-fold: true
+        code-fold: false
 jupyter: python3
 ---
 
@@ -62,6 +62,7 @@ df_payment.nunique()
 ```
 
 Data `pembayaran.csv` berisi 3869 data transaksi pembayaran pajak kendaraan bermotor dengan 4 atribut atau variabel sebagai berikut:
+
 1. `Nopol`: Nomor plat kendaraan bermotor
 2. `Tgl Bayar`: Tanggal pembayaran pajak kendaraan terkait
 3. `Bayar`: Nominal pembayaran berdasarkan PKB Pokok
@@ -85,6 +86,7 @@ df_profil_op.nunique()
 ```
 
 Data `profil_op.csv` berisi 1000 amatan profil kendaraan bermotor dengan 9 atribut atau variabel sebagai berikut:
+
 1. `Nopol`: Nomor plat kendaraan bermotor
 2. `Domisili`: Tanggal pembayaran pajak kendaraan terkait
 3. `Tgl Daftar`: Tanggal kendaraan pertama kali terdaftar dalam sistem administrasi kendaraan bermotor 
@@ -98,6 +100,7 @@ Data `profil_op.csv` berisi 1000 amatan profil kendaraan bermotor dengan 9 atrib
 ### 3. Data dibersihkan
 
 Pada kedua data tersebut dapat diidentifikasi atribut unik yang dapat digunakan untuk penggabungan data. Namun sebelum dan sesudah hal tersebut dilakukan perlu adanya:
+
 - pemeriksaan ketepatan tanggal kendaraan terdaftar dan keluar 
 - pemeriksaan duplikasi data, terutama pada `Nopol` dan `PKB Pokok` yang akan dijadikan *key* untuk join data.
 - pemeriksaan kategori pada atribut `Jenis Bahan Bakar`
